--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,4 +1,4 @@
-﻿Version 9.4 (April 30, 2019)
+﻿Version 9.4 (April 24, 2019)
    • Redesign symbols panel
    • Copy custom characters to clipboard
    • Add buttons to change case of characters in editor
@@ -17,7 +17,7 @@
    • Add placeholder character to diacritic buttons for easier readability
    • Default font for the editor is now Calibri, which displays Unicode better
    • Fix bug in Export to HTML process when encountering empty cells in the dictionary window
-   • Fixed bug where dictionary wouldn't load if you opened a new notebook file when the dictionary was open
+   • Fixed bug where dictionary wouldn't reload if you opened a new notebook file when the dictionary window was open
    • Character search
    
 Version 9.3 (April 13, 2019)
